[gd_scene load_steps=6 format=3 uid="uid://br3v1wribe6qv"]

[ext_resource type="Script" uid="uid://ce8egfnjuk5tp" path="res://_MODULES_/UpgradeAltar/upgrade_altar.gd" id="1_edai0"]
[ext_resource type="Texture2D" uid="uid://caj4ik8wfjije" path="res://_MODULES_/UpgradeAltar/assets/pad_inactive.png" id="2_n7rc3"]
[ext_resource type="Texture2D" uid="uid://dqpaffg5aclch" path="res://_MODULES_/UpgradeAltar/assets/leftarrow.png" id="3_88k8m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_edai0"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n7rc3"]
radius = 16.0

[node name="UpgradeAltar" type="Node2D"]
script = ExtResource("1_edai0")

[node name="Pad1" type="Area2D" parent="."]
position = Vector2(-32, 0)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pad1"]
shape = SubResource("CircleShape2D_edai0")

[node name="Sprite2D" type="Sprite2D" parent="Pad1"]
texture = ExtResource("2_n7rc3")

[node name="Arrow" type="Sprite2D" parent="."]
texture = ExtResource("3_88k8m")

[node name="Pad2" type="Area2D" parent="."]
position = Vector2(32, 0)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pad2"]
shape = SubResource("CircleShape2D_n7rc3")

[node name="Sprite2D" type="Sprite2D" parent="Pad2"]
texture = ExtResource("2_n7rc3")

[connection signal="body_entered" from="Pad1" to="." method="_on_pad_body_entered"]
[connection signal="body_entered" from="Pad1" to="." method="_on_pad_1_body_entered"]
[connection signal="body_exited" from="Pad1" to="." method="_on_pad_1_body_exited"]
[connection signal="body_entered" from="Pad2" to="." method="_on_pad_body_entered"]
[connection signal="body_entered" from="Pad2" to="." method="_on_pad_2_body_entered"]
[connection signal="body_exited" from="Pad2" to="." method="_on_pad_2_body_exited"]
